--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-TOKEN=JOUW_BOT_TOKEN_HIER
-CLIENT_ID=JOUW_APPLICATION_ID_HIER
-GUILD_ID=JOUW_SERVER_ID_HIER
+TOKEN=MTE4NzQ3NDY5NTQ0OTIzNTYzMQ.GabHG6.3ilBlTg0JjFJdvqIqQvgodgNP0ep4Ytck1cwcg
+CLIENT_ID=1187474695449235631
+GUILD_ID=1442427827889897565
