--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 TOKEN=MTE4NzQ3NDY5NTQ0OTIzNTYzMQ.GabHG6.3ilBlTg0JjFJdvqIqQvgodgNP0ep4Ytck1cwcg
 CLIENT_ID=1187474695449235631
 GUILD_ID=1442427827889897565
+PORT=3000
